// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ToggleButton /> can render "check" variant 1`] = `
<DocumentFragment>
  <button
    class="btn-toggle btn btn-primary"
    data-testid="toggle-button"
    title="Toggle me real good!"
    type="button"
  >
    <i
      class="fa far-square"
    />
  </button>
</DocumentFragment>
`;

exports[`<ToggleButton /> can render "grid-list" variant 1`] = `
<DocumentFragment>
  <div
    class="slider--grid-list"
  >
    <i
      class="fa fas-list"
    />
    <label
      class="switch my-auto mx-1"
    >
      <input
        data-testid="toggle-button"
        name="Toggle me real good!"
        type="checkbox"
      />
      <span
        class="slider--teal slider slider--round"
      />
    </label>
    <i
      class="fa fas-th"
    />
  </div>
</DocumentFragment>
`;

exports[`<ToggleButton /> can render "switch" variant 1`] = `
<DocumentFragment>
  <label
    class="switch my-auto mx-1"
  >
    <input
      data-testid="toggle-button"
      name="Toggle me real good!"
      type="checkbox"
    />
    <span
      class="slider slider--round"
    />
  </label>
</DocumentFragment>
`;

exports[`<ToggleButton /> can render with icon-only prop 1`] = `
<DocumentFragment>
  <i
    class="fa far-square"
  />
</DocumentFragment>
`;
